--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ dkms.conf
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+slides/slides.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
