--- a/slides/Makefile
+++ b/slides/Makefile
@@ -1,2 +1,2 @@
 slides.pdf: slides.md
-	pandoc -t beamer -o slides.pdf slides.md --highlight-style=pandoc_bg.theme  -H make-code-footnotesize.tex
+	pandoc -t beamer -o slides.pdf slides.md --highlight-style=pandoc_bg.theme  -H header.tex
